fix bug add debug code

--- a/nfl-big-data-bowl-2020/nfl.ipynb
+++ b/nfl-big-data-bowl-2020/nfl.ipynb
@@ -34,7 +34,7 @@
     "NflId, Team, OffenseFormation, OffensePersonnel, DefensePersonnel, PlayDirection, Position, Stadium, \\\n",
     "GameWeather, WindDirection, PlayerCollegeName = {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}\n",
     "\n",
-    "def process(train_df, mean = None, std = None, pred = False):\n",
+    "def process(train_df, mean = [], std = [], pred = False):\n",
     "    plays = int(len(train_df) / 22)\n",
     "    play, attr = 0, 15\n",
     "    X = np.zeros((plays, attr * 22 + 25))\n",
@@ -107,9 +107,9 @@
     "    X[np.isnan(X)] = 0\n",
     "#     np.savetxt('X.csv', X, delimiter=',')\n",
     "#     np.savetxt('Y.csv', Y, delimiter=',')        \n",
-    "    if mean == None:\n",
+    "    if len(mean) == 0:\n",
     "        mean = np.mean(X, axis = 0)\n",
-    "    if std == None:\n",
+    "    if len(std) == 0:\n",
     "        std = np.std(X, axis = 0)\n",
     "    X = X - mean\n",
     "    np.savetxt('X_mean.csv', X, delimiter=',')\n",
@@ -185,12 +185,13 @@
     "def train_my_model(train_df):\n",
     "    train_X, train_Y, dev_X, dev_Y, mean, std = process(train_df)\n",
     "    model = models.Sequential()\n",
-    "    model.add(layers.Dense(512, activation='relu',input_shape=(train_X.shape[1],)))\n",
+    "    model.add(layers.Dense(1024, activation='relu',input_shape=(train_X.shape[1],)))\n",
+    "    model.add(layers.Dense(1024, activation='relu'))\n",
     "    model.add(layers.Dense(512, activation='relu'))\n",
     "    model.add(layers.Dense(256, activation='relu'))\n",
     "    model.add(layers.Dense(199, activation='softmax'))\n",
     "    model.compile(optimizer = 'rmsprop',loss = 'categorical_crossentropy', metrics = ['categorical_accuracy'])\n",
-    "    history = model.fit(train_X, train_Y, validation_data = (dev_X, dev_Y), epochs = 2, batch_size = 32)\n",
+    "    history = model.fit(train_X, train_Y, validation_data = (dev_X, dev_Y), epochs = 50, batch_size = 32)\n",
     "    return model, mean, std, history\n",
     "model, mean, std, history = train_my_model(train_df)"
    ]
@@ -234,7 +235,7 @@
     "    df, _, _, _, _, _ = process(test_df, mean = mean, std = std, pred = True)\n",
     "    pdf = model.predict(df)\n",
     "    predictions_df = np.zeros(200)\n",
-    "    predictions_df[0] = test_df[1]\n",
+    "    predictions_df[0] = test_df['PlayId']\n",
     "    for p in range(199):\n",
     "        predictions_df[p + 1] = pdf[p] if p == 0 else pdf[p - 1] + pdf[p]\n",
     "    return prediction_df"
@@ -3711,8 +3712,8 @@
    ],
    "source": [
     "for (test_df, sample_prediction_df) in env.iter_test():\n",
-    "  predictions_df = make_my_predictions(test_df, sample_prediction_df)\n",
-    "  env.predict(predictions_df)\n",
+    "    predictions_df = make_my_predictions(test_df, sample_prediction_df)\n",
+    "    env.predict(predictions_df)\n",
     "\n",
     "env.write_submission_file()"
    ]
