fix bug add debug code

--- a/nfl-big-data-bowl-2020/nfl.ipynb
+++ b/nfl-big-data-bowl-2020/nfl.ipynb
@@ -234,10 +234,9 @@
     "def make_my_predictions(test_df, sample_prediction_df):\n",
     "    df, _, _, _, _, _ = process(test_df, mean = mean, std = std, pred = True)\n",
     "    pdf = model.predict(df)\n",
-    "    predictions_df = np.zeros(200)\n",
-    "    predictions_df[0] = test_df['PlayId']\n",
+    "    prediction_df = np.zeros((1,199))\n",
     "    for p in range(199):\n",
-    "        predictions_df[p + 1] = pdf[p] if p == 0 else pdf[p - 1] + pdf[p]\n",
+    "        prediction_df[0][p] = pdf[0][p] if p == 0 else pdf[0][p - 1] + pdf[0][p]\n",
     "    return prediction_df"
    ]
   },
