fix bug add debug code

--- a/nfl-big-data-bowl-2020/nfl.ipynb
+++ b/nfl-big-data-bowl-2020/nfl.ipynb
@@ -234,8 +234,8 @@
     "def make_my_predictions(test_df, sample_prediction_df):\n",
     "    df, _, _, _, _, _ = process(test_df, mean = mean, std = std, pred = True)\n",
     "    pdf = model.predict(df)\n",
-    "    for index in range(sample_prediction_df.shape[1]):\n",
-    "        sample_prediction_df.iloc[: , index] = pdf[index]\n",
+    "    for i in range(sample_prediction_df.shape[1]):\n",
+    "        sample_prediction_df.iloc[: , i] = pdf[0][i]\n",
     "    return sample_prediction_df"
    ]
   },
