--- a/nfl-big-data-bowl-2020/nfl.ipynb
+++ b/nfl-big-data-bowl-2020/nfl.ipynb
@@ -135,135 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING - From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING - From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 20853 samples, validate on 2317 samples\n",
-      "Epoch 1/50\n",
-      "20853/20853 [==============================] - 13s 629us/step - loss: 2.9523 - categorical_accuracy: 0.1213 - val_loss: 2.9254 - val_categorical_accuracy: 0.1308\n",
-      "Epoch 2/50\n",
-      "20853/20853 [==============================] - 13s 613us/step - loss: 2.8683 - categorical_accuracy: 0.1318 - val_loss: 2.9004 - val_categorical_accuracy: 0.1347\n",
-      "Epoch 3/50\n",
-      "20853/20853 [==============================] - 13s 614us/step - loss: 2.8335 - categorical_accuracy: 0.1370 - val_loss: 2.9619 - val_categorical_accuracy: 0.1131\n",
-      "Epoch 4/50\n",
-      "20853/20853 [==============================] - 13s 612us/step - loss: 2.7921 - categorical_accuracy: 0.1485 - val_loss: 2.9313 - val_categorical_accuracy: 0.1213\n",
-      "Epoch 5/50\n",
-      "20853/20853 [==============================] - 13s 611us/step - loss: 2.7342 - categorical_accuracy: 0.1537 - val_loss: 2.9893 - val_categorical_accuracy: 0.1299\n",
-      "Epoch 6/50\n",
-      "20853/20853 [==============================] - 13s 617us/step - loss: 2.6625 - categorical_accuracy: 0.1647 - val_loss: 3.1232 - val_categorical_accuracy: 0.1243\n",
-      "Epoch 7/50\n",
-      "20853/20853 [==============================] - 13s 608us/step - loss: 2.5765 - categorical_accuracy: 0.1758 - val_loss: 3.3855 - val_categorical_accuracy: 0.1075\n",
-      "Epoch 8/50\n",
-      "20853/20853 [==============================] - 13s 617us/step - loss: 2.5036 - categorical_accuracy: 0.1974 - val_loss: 3.3892 - val_categorical_accuracy: 0.1109\n",
-      "Epoch 9/50\n",
-      "20853/20853 [==============================] - 13s 611us/step - loss: 2.4252 - categorical_accuracy: 0.2155 - val_loss: 3.4884 - val_categorical_accuracy: 0.1105\n",
-      "Epoch 10/50\n",
-      "20853/20853 [==============================] - 13s 612us/step - loss: 2.3542 - categorical_accuracy: 0.2368 - val_loss: 3.6335 - val_categorical_accuracy: 0.0811\n",
-      "Epoch 11/50\n",
-      "20853/20853 [==============================] - 13s 613us/step - loss: 2.2687 - categorical_accuracy: 0.2626 - val_loss: 4.2339 - val_categorical_accuracy: 0.0876\n",
-      "Epoch 12/50\n",
-      "20853/20853 [==============================] - 13s 613us/step - loss: 2.1877 - categorical_accuracy: 0.2886 - val_loss: 4.3094 - val_categorical_accuracy: 0.0777\n",
-      "Epoch 13/50\n",
-      "20853/20853 [==============================] - 13s 610us/step - loss: 2.1224 - categorical_accuracy: 0.3174 - val_loss: 4.5215 - val_categorical_accuracy: 0.0833\n",
-      "Epoch 14/50\n",
-      "20853/20853 [==============================] - 13s 613us/step - loss: 2.0651 - categorical_accuracy: 0.3333 - val_loss: 4.8171 - val_categorical_accuracy: 0.0958\n",
-      "Epoch 15/50\n",
-      "20853/20853 [==============================] - 13s 621us/step - loss: 2.0073 - categorical_accuracy: 0.3575 - val_loss: 5.1964 - val_categorical_accuracy: 0.0798\n",
-      "Epoch 16/50\n",
-      "20853/20853 [==============================] - 14s 693us/step - loss: 1.9443 - categorical_accuracy: 0.3772 - val_loss: 5.2306 - val_categorical_accuracy: 0.0893\n",
-      "Epoch 17/50\n",
-      "20853/20853 [==============================] - 10s 488us/step - loss: 1.8884 - categorical_accuracy: 0.4003 - val_loss: 5.7015 - val_categorical_accuracy: 0.1010\n",
-      "Epoch 18/50\n",
-      "20853/20853 [==============================] - 10s 472us/step - loss: 1.8622 - categorical_accuracy: 0.4166 - val_loss: 5.1982 - val_categorical_accuracy: 0.0937\n",
-      "Epoch 19/50\n",
-      "20853/20853 [==============================] - 10s 490us/step - loss: 1.8312 - categorical_accuracy: 0.4307 - val_loss: 5.2318 - val_categorical_accuracy: 0.0984\n",
-      "Epoch 20/50\n",
-      "20853/20853 [==============================] - 10s 496us/step - loss: 1.7795 - categorical_accuracy: 0.4399 - val_loss: 5.6302 - val_categorical_accuracy: 0.0842\n",
-      "Epoch 21/50\n",
-      "20853/20853 [==============================] - 11s 519us/step - loss: 1.7564 - categorical_accuracy: 0.4548 - val_loss: 6.4046 - val_categorical_accuracy: 0.0984\n",
-      "Epoch 22/50\n",
-      "20853/20853 [==============================] - 10s 484us/step - loss: 1.7380 - categorical_accuracy: 0.4693 - val_loss: 5.8087 - val_categorical_accuracy: 0.0777\n",
-      "Epoch 23/50\n",
-      "20853/20853 [==============================] - 13s 608us/step - loss: 1.6967 - categorical_accuracy: 0.4876 - val_loss: 6.1810 - val_categorical_accuracy: 0.0898\n",
-      "Epoch 24/50\n",
-      "20853/20853 [==============================] - 13s 643us/step - loss: 1.6681 - categorical_accuracy: 0.4925 - val_loss: 6.2339 - val_categorical_accuracy: 0.0950\n",
-      "Epoch 25/50\n",
-      "20853/20853 [==============================] - 12s 571us/step - loss: 1.6308 - categorical_accuracy: 0.5085 - val_loss: 6.2977 - val_categorical_accuracy: 0.0807\n",
-      "Epoch 26/50\n",
-      "20853/20853 [==============================] - 12s 593us/step - loss: 1.6072 - categorical_accuracy: 0.5196 - val_loss: 6.6293 - val_categorical_accuracy: 0.0937\n",
-      "Epoch 27/50\n",
-      "20853/20853 [==============================] - 14s 664us/step - loss: 1.5757 - categorical_accuracy: 0.5346 - val_loss: 6.0798 - val_categorical_accuracy: 0.0984\n",
-      "Epoch 28/50\n",
-      "20853/20853 [==============================] - 13s 616us/step - loss: 1.5619 - categorical_accuracy: 0.5402 - val_loss: 6.0615 - val_categorical_accuracy: 0.0816\n",
-      "Epoch 29/50\n",
-      "20853/20853 [==============================] - 13s 620us/step - loss: 1.5552 - categorical_accuracy: 0.5479 - val_loss: 6.3895 - val_categorical_accuracy: 0.0902\n",
-      "Epoch 30/50\n",
-      "20853/20853 [==============================] - 13s 603us/step - loss: 1.5281 - categorical_accuracy: 0.5601 - val_loss: 6.6437 - val_categorical_accuracy: 0.0807\n",
-      "Epoch 31/50\n",
-      "20853/20853 [==============================] - 13s 611us/step - loss: 1.5136 - categorical_accuracy: 0.5642 - val_loss: 6.9412 - val_categorical_accuracy: 0.0781\n",
-      "Epoch 32/50\n",
-      "20853/20853 [==============================] - 13s 618us/step - loss: 1.4941 - categorical_accuracy: 0.5767 - val_loss: 7.0856 - val_categorical_accuracy: 0.1036\n",
-      "Epoch 33/50\n",
-      "20853/20853 [==============================] - 13s 613us/step - loss: 1.5063 - categorical_accuracy: 0.5787 - val_loss: 6.8697 - val_categorical_accuracy: 0.0703\n",
-      "Epoch 34/50\n",
-      "20853/20853 [==============================] - 13s 632us/step - loss: 1.5124 - categorical_accuracy: 0.5835 - val_loss: 6.4919 - val_categorical_accuracy: 0.0781\n",
-      "Epoch 35/50\n",
-      "20853/20853 [==============================] - 13s 628us/step - loss: 1.4994 - categorical_accuracy: 0.5801 - val_loss: 7.7502 - val_categorical_accuracy: 0.0751\n",
-      "Epoch 36/50\n",
-      "20853/20853 [==============================] - 12s 597us/step - loss: 1.5211 - categorical_accuracy: 0.5810 - val_loss: 7.5894 - val_categorical_accuracy: 0.0937\n",
-      "Epoch 37/50\n",
-      "20853/20853 [==============================] - 12s 598us/step - loss: 1.5308 - categorical_accuracy: 0.5844 - val_loss: 6.3704 - val_categorical_accuracy: 0.0837\n",
-      "Epoch 38/50\n",
-      "20853/20853 [==============================] - 12s 594us/step - loss: 1.5378 - categorical_accuracy: 0.5902 - val_loss: 5.9777 - val_categorical_accuracy: 0.0742\n",
-      "Epoch 39/50\n",
-      "20853/20853 [==============================] - 12s 591us/step - loss: 1.5669 - categorical_accuracy: 0.5873 - val_loss: 6.9161 - val_categorical_accuracy: 0.0703\n",
-      "Epoch 40/50\n",
-      "20853/20853 [==============================] - 12s 592us/step - loss: 1.5763 - categorical_accuracy: 0.5869 - val_loss: 7.1129 - val_categorical_accuracy: 0.0729\n",
-      "Epoch 41/50\n",
-      "20853/20853 [==============================] - 13s 602us/step - loss: 1.5832 - categorical_accuracy: 0.5837 - val_loss: 7.8883 - val_categorical_accuracy: 0.0703\n",
-      "Epoch 42/50\n",
-      "20853/20853 [==============================] - 12s 563us/step - loss: 1.6124 - categorical_accuracy: 0.5827 - val_loss: 7.2006 - val_categorical_accuracy: 0.0906\n",
-      "Epoch 43/50\n",
-      "20853/20853 [==============================] - 15s 705us/step - loss: 1.6398 - categorical_accuracy: 0.5798 - val_loss: 6.6122 - val_categorical_accuracy: 0.0678\n",
-      "Epoch 44/50\n",
-      "20853/20853 [==============================] - 15s 742us/step - loss: 1.6598 - categorical_accuracy: 0.5827 - val_loss: 5.7449 - val_categorical_accuracy: 0.0527\n",
-      "Epoch 45/50\n",
-      "20853/20853 [==============================] - 16s 752us/step - loss: 1.6558 - categorical_accuracy: 0.5788 - val_loss: 6.6948 - val_categorical_accuracy: 0.0773\n",
-      "Epoch 46/50\n",
-      "20853/20853 [==============================] - 16s 753us/step - loss: 1.6779 - categorical_accuracy: 0.5754 - val_loss: 6.7228 - val_categorical_accuracy: 0.0760\n",
-      "Epoch 47/50\n",
-      "20853/20853 [==============================] - 14s 688us/step - loss: 1.7078 - categorical_accuracy: 0.5734 - val_loss: 7.3007 - val_categorical_accuracy: 0.0885\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 48/50\n",
-      "20853/20853 [==============================] - 12s 579us/step - loss: 1.7206 - categorical_accuracy: 0.5621 - val_loss: 6.2530 - val_categorical_accuracy: 0.0617\n",
-      "Epoch 49/50\n",
-      "20853/20853 [==============================] - 12s 590us/step - loss: 1.7249 - categorical_accuracy: 0.5695 - val_loss: 7.4907 - val_categorical_accuracy: 0.0846\n",
-      "Epoch 50/50\n",
-      "20853/20853 [==============================] - 16s 750us/step - loss: 1.7640 - categorical_accuracy: 0.5623 - val_loss: 6.6202 - val_categorical_accuracy: 0.0656\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_my_model(train_df):\n",
     "    train_X, train_Y, dev_X, dev_Y, mean, std = process(train_df)\n",
@@ -281,28 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f48631c33c8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4862bb9c50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "val_acc = history.history['val_loss']\n",
@@ -329,31 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_my_predictions(test_df, sample_prediction_df):\n",
     "    df, _, _, _, _, _ = process(test_df, mean = mean, std = std, pred = True)\n",
     "    pdf = model.predict(df)\n",
-    "    for i in range(sample_prediction_df.shape[1]):\n",
-    "        sample_prediction_df.iloc[: , i] = pdf[0][i]\n",
-    "    return sample_prediction_df"
+    "    col = []\n",
+    "    for i in range(199):\n",
+    "        pdf[0][i] = pdf[0][i] if i == 0 else pdf[0][i - 1] + pdf[0][i]\n",
+    "        col.append('Yards' + str(i - 99))\n",
+    "    pdf[pdf > 1] = 1\n",
+    "    pred_df = pd.DataFrame(pdf, columns=col)\n",
+    "    return pred_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your submission file has been saved!  Once you `Commit` your Notebook and it finishes running, you can submit the file to the competition from the Notebook Viewer `Output` tab.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (test_df, sample_prediction_df) in env.iter_test():\n",
     "    predictions_df = make_my_predictions(test_df, sample_prediction_df)\n",
