--- a/nfl-big-data-bowl-2020/nfl.ipynb
+++ b/nfl-big-data-bowl-2020/nfl.ipynb
@@ -135,9 +135,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING - From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING - From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20853 samples, validate on 2317 samples\n",
+      "Epoch 1/50\n",
+      "20853/20853 [==============================] - 14s 687us/step - loss: 2.9590 - categorical_accuracy: 0.1235 - val_loss: 2.8994 - val_categorical_accuracy: 0.1226\n",
+      "Epoch 2/50\n",
+      "20853/20853 [==============================] - 14s 666us/step - loss: 2.8718 - categorical_accuracy: 0.1290 - val_loss: 2.9165 - val_categorical_accuracy: 0.1295\n",
+      "Epoch 3/50\n",
+      "20853/20853 [==============================] - 14s 656us/step - loss: 2.8317 - categorical_accuracy: 0.1372 - val_loss: 2.9160 - val_categorical_accuracy: 0.1217\n",
+      "Epoch 4/50\n",
+      "20853/20853 [==============================] - 15s 739us/step - loss: 2.7891 - categorical_accuracy: 0.1536 - val_loss: 2.9431 - val_categorical_accuracy: 0.1316\n",
+      "Epoch 5/50\n",
+      "20853/20853 [==============================] - 15s 711us/step - loss: 2.7303 - categorical_accuracy: 0.1591 - val_loss: 3.0101 - val_categorical_accuracy: 0.1200\n",
+      "Epoch 6/50\n",
+      "20853/20853 [==============================] - 14s 695us/step - loss: 2.6467 - categorical_accuracy: 0.1718 - val_loss: 3.2265 - val_categorical_accuracy: 0.1338\n",
+      "Epoch 7/50\n",
+      "20853/20853 [==============================] - 14s 651us/step - loss: 2.5638 - categorical_accuracy: 0.1870 - val_loss: 3.2408 - val_categorical_accuracy: 0.1329\n",
+      "Epoch 8/50\n",
+      "20853/20853 [==============================] - 14s 693us/step - loss: 2.4715 - categorical_accuracy: 0.2026 - val_loss: 3.8388 - val_categorical_accuracy: 0.1027\n",
+      "Epoch 9/50\n",
+      "20853/20853 [==============================] - 15s 703us/step - loss: 2.3892 - categorical_accuracy: 0.2264 - val_loss: 4.0849 - val_categorical_accuracy: 0.1075\n",
+      "Epoch 10/50\n",
+      "20853/20853 [==============================] - 14s 675us/step - loss: 2.3013 - categorical_accuracy: 0.2553 - val_loss: 4.1209 - val_categorical_accuracy: 0.1114\n",
+      "Epoch 11/50\n",
+      "20853/20853 [==============================] - 17s 834us/step - loss: 2.2139 - categorical_accuracy: 0.2821 - val_loss: 4.2786 - val_categorical_accuracy: 0.0958\n",
+      "Epoch 12/50\n",
+      "20853/20853 [==============================] - 18s 880us/step - loss: 2.1378 - categorical_accuracy: 0.3109 - val_loss: 4.4830 - val_categorical_accuracy: 0.1118\n",
+      "Epoch 13/50\n",
+      "20853/20853 [==============================] - 19s 892us/step - loss: 2.0653 - categorical_accuracy: 0.3364 - val_loss: 4.3247 - val_categorical_accuracy: 0.0937\n",
+      "Epoch 14/50\n",
+      "20853/20853 [==============================] - 19s 901us/step - loss: 2.0059 - categorical_accuracy: 0.3647 - val_loss: 4.8991 - val_categorical_accuracy: 0.1053\n",
+      "Epoch 15/50\n",
+      "20853/20853 [==============================] - 19s 909us/step - loss: 1.9452 - categorical_accuracy: 0.3886 - val_loss: 4.8085 - val_categorical_accuracy: 0.0902\n",
+      "Epoch 16/50\n",
+      "20853/20853 [==============================] - 19s 900us/step - loss: 1.9083 - categorical_accuracy: 0.4014 - val_loss: 4.9881 - val_categorical_accuracy: 0.0967\n",
+      "Epoch 17/50\n",
+      "20853/20853 [==============================] - 19s 892us/step - loss: 1.8602 - categorical_accuracy: 0.4256 - val_loss: 5.2729 - val_categorical_accuracy: 0.0868\n",
+      "Epoch 18/50\n",
+      "20853/20853 [==============================] - 18s 850us/step - loss: 1.8029 - categorical_accuracy: 0.4482 - val_loss: 5.4497 - val_categorical_accuracy: 0.0837\n",
+      "Epoch 19/50\n",
+      "20853/20853 [==============================] - 18s 849us/step - loss: 1.7803 - categorical_accuracy: 0.4612 - val_loss: 5.3131 - val_categorical_accuracy: 0.0993\n",
+      "Epoch 20/50\n",
+      "20853/20853 [==============================] - 17s 830us/step - loss: 1.7635 - categorical_accuracy: 0.4714 - val_loss: 5.2316 - val_categorical_accuracy: 0.0850\n",
+      "Epoch 21/50\n",
+      "20853/20853 [==============================] - 17s 800us/step - loss: 1.7335 - categorical_accuracy: 0.4796 - val_loss: 5.3945 - val_categorical_accuracy: 0.0803\n",
+      "Epoch 22/50\n",
+      "20853/20853 [==============================] - 16s 783us/step - loss: 1.7272 - categorical_accuracy: 0.4929 - val_loss: 5.6244 - val_categorical_accuracy: 0.0984\n",
+      "Epoch 23/50\n",
+      "20853/20853 [==============================] - 17s 797us/step - loss: 1.7099 - categorical_accuracy: 0.5021 - val_loss: 5.6978 - val_categorical_accuracy: 0.0997\n",
+      "Epoch 24/50\n",
+      "20853/20853 [==============================] - 16s 773us/step - loss: 1.6966 - categorical_accuracy: 0.5163 - val_loss: 5.0377 - val_categorical_accuracy: 0.0751\n",
+      "Epoch 25/50\n",
+      "20853/20853 [==============================] - 15s 743us/step - loss: 1.6881 - categorical_accuracy: 0.5171 - val_loss: 6.5602 - val_categorical_accuracy: 0.1079\n",
+      "Epoch 26/50\n",
+      "20853/20853 [==============================] - 16s 758us/step - loss: 1.6977 - categorical_accuracy: 0.5195 - val_loss: 6.0343 - val_categorical_accuracy: 0.0932\n",
+      "Epoch 27/50\n",
+      "20853/20853 [==============================] - 16s 751us/step - loss: 1.6826 - categorical_accuracy: 0.5273 - val_loss: 5.9537 - val_categorical_accuracy: 0.0954\n",
+      "Epoch 28/50\n",
+      "20853/20853 [==============================] - 16s 761us/step - loss: 1.6566 - categorical_accuracy: 0.5341 - val_loss: 5.9178 - val_categorical_accuracy: 0.0898\n",
+      "Epoch 29/50\n",
+      "20853/20853 [==============================] - 16s 779us/step - loss: 1.6898 - categorical_accuracy: 0.5365 - val_loss: 5.5225 - val_categorical_accuracy: 0.0820\n",
+      "Epoch 30/50\n",
+      "20853/20853 [==============================] - 16s 775us/step - loss: 1.6413 - categorical_accuracy: 0.5483 - val_loss: 6.1938 - val_categorical_accuracy: 0.1040\n",
+      "Epoch 31/50\n",
+      "20853/20853 [==============================] - 14s 675us/step - loss: 1.6271 - categorical_accuracy: 0.5587 - val_loss: 6.4258 - val_categorical_accuracy: 0.0967\n",
+      "Epoch 32/50\n",
+      "20853/20853 [==============================] - 14s 690us/step - loss: 1.6281 - categorical_accuracy: 0.5609 - val_loss: 6.5103 - val_categorical_accuracy: 0.0980\n",
+      "Epoch 33/50\n",
+      "20853/20853 [==============================] - 17s 798us/step - loss: 1.6180 - categorical_accuracy: 0.5666 - val_loss: 6.4675 - val_categorical_accuracy: 0.0876\n",
+      "Epoch 34/50\n",
+      "20853/20853 [==============================] - 17s 803us/step - loss: 1.5912 - categorical_accuracy: 0.5710 - val_loss: 6.0867 - val_categorical_accuracy: 0.0885\n",
+      "Epoch 35/50\n",
+      "20853/20853 [==============================] - 17s 811us/step - loss: 1.5940 - categorical_accuracy: 0.5755 - val_loss: 6.3489 - val_categorical_accuracy: 0.0798\n",
+      "Epoch 36/50\n",
+      "20853/20853 [==============================] - 17s 799us/step - loss: 1.5680 - categorical_accuracy: 0.5841 - val_loss: 6.7993 - val_categorical_accuracy: 0.0945\n",
+      "Epoch 37/50\n",
+      "20853/20853 [==============================] - 16s 781us/step - loss: 1.5704 - categorical_accuracy: 0.5926 - val_loss: 6.4940 - val_categorical_accuracy: 0.0885\n",
+      "Epoch 38/50\n",
+      "20853/20853 [==============================] - 16s 773us/step - loss: 1.5508 - categorical_accuracy: 0.5970 - val_loss: 7.1899 - val_categorical_accuracy: 0.0893\n",
+      "Epoch 39/50\n",
+      "20853/20853 [==============================] - 17s 826us/step - loss: 1.5779 - categorical_accuracy: 0.5949 - val_loss: 7.3351 - val_categorical_accuracy: 0.0868\n",
+      "Epoch 40/50\n",
+      "20853/20853 [==============================] - 17s 794us/step - loss: 1.5842 - categorical_accuracy: 0.5966 - val_loss: 7.7754 - val_categorical_accuracy: 0.0876\n",
+      "Epoch 41/50\n",
+      "20853/20853 [==============================] - 16s 768us/step - loss: 1.5895 - categorical_accuracy: 0.5979 - val_loss: 6.7073 - val_categorical_accuracy: 0.0924\n",
+      "Epoch 42/50\n",
+      "20853/20853 [==============================] - 16s 776us/step - loss: 1.5731 - categorical_accuracy: 0.6029 - val_loss: 6.7583 - val_categorical_accuracy: 0.0889\n",
+      "Epoch 43/50\n",
+      "20853/20853 [==============================] - 16s 758us/step - loss: 1.6020 - categorical_accuracy: 0.6008 - val_loss: 6.6018 - val_categorical_accuracy: 0.0850\n",
+      "Epoch 44/50\n",
+      "20853/20853 [==============================] - 14s 674us/step - loss: 1.6232 - categorical_accuracy: 0.6029 - val_loss: 6.7241 - val_categorical_accuracy: 0.0928\n",
+      "Epoch 45/50\n",
+      "20853/20853 [==============================] - 16s 773us/step - loss: 1.6297 - categorical_accuracy: 0.5979 - val_loss: 6.8235 - val_categorical_accuracy: 0.0937\n",
+      "Epoch 46/50\n",
+      "20853/20853 [==============================] - 17s 828us/step - loss: 1.6956 - categorical_accuracy: 0.5852 - val_loss: 5.2288 - val_categorical_accuracy: 0.0820\n",
+      "Epoch 47/50\n",
+      "20853/20853 [==============================] - 17s 824us/step - loss: 1.6891 - categorical_accuracy: 0.5853 - val_loss: 6.4842 - val_categorical_accuracy: 0.0880\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 48/50\n",
+      "20853/20853 [==============================] - 16s 745us/step - loss: 1.6786 - categorical_accuracy: 0.5866 - val_loss: 6.6443 - val_categorical_accuracy: 0.1027\n",
+      "Epoch 49/50\n",
+      "20853/20853 [==============================] - 11s 541us/step - loss: 1.6804 - categorical_accuracy: 0.5897 - val_loss: 7.1154 - val_categorical_accuracy: 0.0980\n",
+      "Epoch 50/50\n",
+      "20853/20853 [==============================] - 11s 538us/step - loss: 1.7019 - categorical_accuracy: 0.5922 - val_loss: 7.5219 - val_categorical_accuracy: 0.0993\n"
+     ]
+    }
+   ],
    "source": [
     "def train_my_model(train_df):\n",
     "    train_X, train_Y, dev_X, dev_Y, mean, std = process(train_df)\n",
@@ -155,9 +281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f9835bcc438>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f982b700cc0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "val_acc = history.history['val_loss']\n",
@@ -184,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,9 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your submission file has been saved!  Once you `Commit` your Notebook and it finishes running, you can submit the file to the competition from the Notebook Viewer `Output` tab.\n"
+     ]
+    }
+   ],
    "source": [
     "for (test_df, sample_prediction_df) in env.iter_test():\n",
     "    predictions_df = make_my_predictions(test_df, sample_prediction_df)\n",
